--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "prettier": "prettier --write . && vite build"
   },
   "devDependencies": {
-    "vite": "^7.0.0"
+    "prettier": "^3.6.2",
+    "vite": "^7.0.0",
+    "vite-plugin-singlefile": "^2.3.0",
+    "vite-plugin-string": "^1.2.3"
   },
   "dependencies": {
-    "prettier": "^3.6.2"
+    "gsap": "^3.13.0",
+    "swiper": "^11.2.10"
   }
 }
